# IpaInstallationServer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
output/Resources/: manifest_template.plist
source/: main.cpp
source/IpaInstallation/: CMakeLists.txt
source/IpaInstallation/include/GenerateLink/: FileEnumerator.h
source/IpaInstallation/include/Networker/: NetworkUtils.h
source/IpaInstallation/lib/: FileEnumerator.cpp  NetworkUtils.cpp
